[package]
name = "twilioc-rs"
version = "0.1.0"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="1.0.7", features=["ssl"]}
openssl = "0.10.24"
serde_derive = "1.0.99"
toml = "0.5.3"