[package]
name = "twilioc-rs"
version = "0.1.0"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2.5"
actix-web = {version="1.0.7", features=["ssl"]}
futures = "0.1.28"
openssl = "0.10.24"
regex = "1.3.0"
serde = "1.0.99"
serde_derive = "1.0.99"
toml = "0.5.3"